EDSC-1477: Added JS to allow the map tools to follow the master overlay panel when minimized using the collapse icon; Fixed the positioning of leaflet-draw-actions

--- a/app/assets/stylesheets/modules/toolbar.css.scss
+++ b/app/assets/stylesheets/modules/toolbar.css.scss
@@ -82,8 +82,13 @@
   padding: 0;
 }
 
-.leaflet-draw-actions {
-  top: inherit;
+.leaflet-draw-actions-top {
+  margin-top: 0;
+}
+
+.leaflet-right .leaflet-draw-actions {
+  top: auto !important;
+  left: -115px;
 }
 
 .leaflet-draw-toolbar {
@@ -99,6 +104,12 @@
 .leaflet-top.leaflet-right {
   top: 49%;
   z-index: 130;
+}
+
+.is-master-overlay-minimized {
+  .leaflet-top.leaflet-right {
+    top: 95%;
+  }
 }
 
 .leaflet-control-layers {
